Small changes to dashboard style to solve cropping problem on nav bar

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -11,6 +11,11 @@ nav ul {
   padding: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  align-items: flex-start;
+  margin: 0 auto;
 }
 
 nav li {
